Edit text in 'docs.html'

--- a/docs.html
+++ b/docs.html
@@ -83,7 +83,7 @@
                                     </div>
                                     <div class="media-body">
                                         <p><a href="http://cran.rstudio.com">Download latest release (v3.1.2)</a></p>
-                                        <p><strong>R</strong> is a free software environment for statistical computing and graphics. It compiles and runs on a wide variety of <strong>UNIX</strong> platforms, <strong>Mac OS X</strong>, and <strong>Windows</strong>.</p>
+                                        <p><strong>R</strong> is a free software environment for statistical computing and graphics. It runs on a wide variety of <strong>UNIX</strong> platforms, <strong>Mac OS X</strong>, and <strong>Windows</strong>.</p>
                                     </div>
                                 </li>
                             </ul>
@@ -106,12 +106,12 @@
                         </div>
                     </div>
                     <h2 id="install-of-digrammer">Install of DiagrammeR</h2>
-                    <p>The <strong>DiagrammeR</strong> package can be installed as an <strong>R</strong> package in one of two ways: through <strong>GitHub</strong> using the devtools package, or, through <strong>CRAN</strong>.</p>
+                    <p>The <strong>DiagrammeR</strong> package can be installed as an <strong>R</strong> package in one of two ways: through <strong>GitHub</strong> using the <strong>devtools</strong> package, or, through <strong>CRAN</strong>.</p>
                     <div class="row bs-downloads">
                         <div class="col-sm-6">
                             <h3>GitHub</h3>
                             <p>This is the version in development. It's the most up-to-date version, certainly, but it may not be as stable as the <strong>CRAN</strong> version.</p>
-                            <div><pre><code class="prettyprint">install_github('rich-iannone/DiagrammeR')</code></pre></div>
+                            <div><pre><code class="prettyprint">devtools::install_github('rich-iannone/DiagrammeR')</code></pre></div>
                         </div>
                         <div class="col-sm-6">
                             <h3>CRAN</h3>
