--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
             <div class="row">
                 <div class="col-lg-12 text-center">
                     <h2 class="section-heading">The R Package Known As DiagrammeR</h2>
-                    <h3 class="section-subheading text-muted"><br><br><strong>R</strong> + <strong>RStudio</strong> + <strong>htmlwidgets</strong> + <strong>JavaScript</strong> + <strong>d3.js</strong> + <strong>viz.js</strong> + <strong>mermaid.js</strong><br /><br />Generate flowchart diagrams using text in a Markdown-like syntax.</h3>
+                    <h3 class="section-subheading text-muted"><br><br><strong>R</strong> + <strong>RStudio</strong> + <strong>htmlwidgets</strong> + <strong>JavaScript</strong> + <strong>d3.js</strong> + <strong>viz.js</strong> + <strong>mermaid.js</strong><br /><br />Generate graph diagrams using text in a Markdown-like syntax.</h3>
                 </div>
             </div>
             <div class="row text-center">
@@ -99,7 +99,7 @@
                         <i class="fa fa-code fa-stack-1x fa-inverse"></i>
                     </span>
                     <h4 class="service-heading">Simple (Yet Powerful) Syntax</h4>
-                    <p class="text-muted">Easy-to-learn syntax. Templating features for integration with <strong>R</strong> code.</p>
+                    <p class="text-muted">It's easy to learn. Templating features for integration with <strong>R</strong> code.</p>
                 </div>
                 <div class="col-md-4">
                     <span class="fa-stack fa-4x">
