Make corrections to navigation section

--- a/mermaid.html
+++ b/mermaid.html
@@ -218,6 +218,7 @@ C-->E[Rectangle Two]
                 <div class="bs-docs-section">
                     <h1 id="sequence-diagrams" class="page-header">Sequence Diagrams</h1>
                     <p class="lead">The mermaid.js library also supports sequence diagrams.</p>
+                    <h2 id="defining-a-sequence-diagram">Defining a Sequence Diagram</h2>
                     <p>The "How to Draw Sequence Diagrams" report by Poranen, Makinen, and Nummenmaa offers a good introduction to sequence diagrams. Let's replicate the ticket-buying example from Figure 1 of this report and add in some conditionals.</p>
                     <div class="bs-example">
                         <img src="img/mermaid-sequence-diagram-example.png" class="img-responsive center-block">
@@ -253,7 +254,12 @@ sequenceDiagram
                                 <li><a href="#defining-a-mermaid-graph">Defining a mermaid Graph</a></li>
                                 <li><a href="#node-shape-and-text">Node Shape and Text</a></li>
                             </ul>
+                        </li>
+                        <li>
                             <a href="#sequence-diagrams">Sequence Diagrams</a>
+                            <ul class="nav">
+                                <li><a href="#defining-a-sequence-diagram">Defining a Sequence Diagram</a></li>
+                            </ul>
                         </li>            
                     </ul>
                     <a class="back-to-top" href="#top">Back to top</a>
