Add top level naviagation item 'Output'

--- a/docs.html
+++ b/docs.html
@@ -42,6 +42,9 @@
                       <a href="docs.html">Getting started</a>
                     </li>
                     <li>
+                      <a href="output.html">Output</a>
+                    </li>
+                    <li>
                       <a href="graphviz.html">Graphviz</a>
                     </li>
                     <li>
