--- a/graphviz.html
+++ b/graphviz.html
@@ -41,6 +41,9 @@
                     <li>
                       <a href="docs.html">Getting started</a>
                     </li>
+                    <li>
+                      <a href="output.html">Output</a>
+                    </li>
                     <li class="active">
                       <a href="graphviz.html">Graphviz</a>
                     </li>
