Update link in 'graphviz.html'

--- a/graphviz.html
+++ b/graphviz.html
@@ -42,7 +42,7 @@
                       <a href="docs.html">Getting started</a>
                     </li>
                     <li>
-                      <a href="output.html">Output</a>
+                      <a href="io.html">I/O</a>
                     </li>
                     <li class="active">
                       <a href="graphviz.html">Graphviz</a>
@@ -60,10 +60,10 @@
 
     <!-- Docs page layout -->
     <div class="bs-docs-header" id="content">
-      <div class="container">
+        <div class="container">
         <h1>DiagrammeR Docs</h1>
         <p>Get an overview of DiagrammeR, learn the syntax, check out some examples.</p>
-      </div>
+        </div>
     </div>
     <div class="container bs-docs-container">
         <div class="row">
