--- a/docs.html
+++ b/docs.html
@@ -42,7 +42,7 @@
                       <a href="docs.html">Getting started</a>
                     </li>
                     <li>
-                      <a href="output.html">Output</a>
+                      <a href="io.html">I/O</a>
                     </li>
                     <li>
                       <a href="graphviz.html">Graphviz</a>
