Add Arrow Shapes section to document

--- a/graphviz.html
+++ b/graphviz.html
@@ -806,6 +806,60 @@ rank = same; A; B; C;
                             </tbody>
                         </table>
                     </div>
+                    <h2 id="arrow-shapes">Arrow Shapes</h2>
+                    <p>The shapes of arrows are highly customizable. When defining an edge, the <code>arrowhead</code> parameter allows you change the style of arrowhead from the default <code>normal</code> arrow shape, to one of several others. Here are some of the other arrowhead types that could be used.</p>
+                    <div class="table-responsive">
+                        <table class="table table-bordered">
+                            <thead>
+                                <tr>
+                                    <th>Arrow Appearance</th>
+                                    <th>Value for <code>arrowhead</code></th>
+                                </tr>
+                            </thead>
+                            <tbody>
+                                <tr>
+                                    <td class="col-md-1"><img src="img/grviz-arrowhead-normal.png" height="50px"></td>
+                                    <td style="vertical-align:middle;"><code>normal</code></td>
+                                </tr>
+                                <tr>
+                                    <td class="col-md-1"><img src="img/grviz-arrowhead-box.png" height="50px"></td>
+                                    <td style="vertical-align:middle;"><code>box</code></td>
+                                </tr>
+                                <tr>
+                                    <td class="col-md-1"><img src="img/grviz-arrowhead-crow.png" height="50px"></td>
+                                    <td style="vertical-align:middle;"><code>crow</code></td>
+                                </tr>
+                                <tr>
+                                    <td class="col-md-1"><img src="img/grviz-arrowhead-curve.png" height="50px"></td>
+                                    <td style="vertical-align:middle;"><code>curve</code></td>
+                                </tr>
+                                <tr>
+                                    <td class="col-md-1"><img src="img/grviz-arrowhead-diamond.png" height="50px"></td>
+                                    <td style="vertical-align:middle;"><code>diamond</code></td>
+                                </tr>
+                                <tr>
+                                    <td class="col-md-1"><img src="img/grviz-arrowhead-dot.png" height="50px"></td>
+                                    <td style="vertical-align:middle;"><code>dot</code></td>
+                                </tr>
+                                <tr>
+                                    <td class="col-md-1"><img src="img/grviz-arrowhead-inv.png" height="50px"></td>
+                                    <td style="vertical-align:middle;"><code>inv</code></td>
+                                </tr>
+                                <tr>
+                                    <td class="col-md-1"><img src="img/grviz-arrowhead-none.png" height="50px"></td>
+                                    <td style="vertical-align:middle;"><code>none</code></td>
+                                </tr>
+                                <tr>
+                                    <td class="col-md-1"><img src="img/grviz-arrowhead-tee.png" height="50px"></td>
+                                    <td style="vertical-align:middle;"><code>tee</code></td>
+                                </tr>
+                                <tr>
+                                    <td class="col-md-1"><img src="img/grviz-arrowhead-vee.png" height="50px"></td>
+                                    <td style="vertical-align:middle;"><code>vee</code></td>
+                                </tr>
+                            </tbody>
+                        </table>
+                    </div>
                 </div>
                 <div class="bs-docs-section">
                     <h1 id="substitution" class="page-header">Substitution</h1>
@@ -1147,6 +1201,7 @@ engine = "circo")</code></pre>
                                 <li><a href="#node-attributes">Node Attributes</a></li>
                                 <li><a href="#edge-attributes">Edge Attributes</a></li>
                                 <li><a href="#graph-attributes">Graph Attributes</a></li>
+                                <li><a href="#arrow-shapes">Arrow Shapes</a></li>
                             </ul>
                         </li>
                         <li>
