Add section on node shapes

--- a/graphviz.html
+++ b/graphviz.html
@@ -806,6 +806,48 @@ rank = same; A; B; C;
                             </tbody>
                         </table>
                     </div>
+                    <h2 id="node-shapes">Node Shapes</h2>
+                    <p>There's no shortage of shapes available for nodes. Nodes can be changed from the default <code>ellipse</code> shape by using the <code>shape</code> parameter. This table provides a listing of all the possible node shapes.</p>
+                    <div class="table-responsive">
+                        <table class="table table-bordered">
+                            <thead>
+                                <tr>
+                                    <th>Node Appearance</th>
+                                    <th>Value for <code>shape</code></th>
+                                </tr>
+                            </thead>
+                            <tbody>
+                                <tr>
+                                    <td class="col-md-1"><img src="img/grviz-node-shape-oval.png" height="50px"></td>
+                                    <td style="vertical-align:middle;"><code>oval</code></td>
+                                </tr>
+                                <tr>
+                                    <td class="col-md-1"><img src="img/grviz-node-shape-diamond.png" height="50px"></td>
+                                    <td style="vertical-align:middle;"><code>diamond</code></td>
+                                </tr>
+                                <tr>
+                                    <td class="col-md-1"><img src="img/grviz-node-shape-egg.png" height="50px"></td>
+                                    <td style="vertical-align:middle;"><code>egg</code></td>
+                                </tr>
+                                <tr>
+                                    <td class="col-md-1"><img src="img/grviz-node-shape-plaintext.png" height="50px"></td>
+                                    <td style="vertical-align:middle;"><code>plaintext</code></td>
+                                </tr>
+                                <tr>
+                                    <td class="col-md-1"><img src="img/grviz-node-shape-point.png" height="50px"></td>
+                                    <td style="vertical-align:middle;"><code>point</code></td>
+                                </tr>
+                                <tr>
+                                    <td class="col-md-1"><img src="img/grviz-node-shape-square.png" height="50px"></td>
+                                    <td style="vertical-align:middle;"><code>square</code></td>
+                                </tr>
+                                <tr>
+                                    <td class="col-md-1"><img src="img/grviz-node-shape-triangle.png" height="50px"></td>
+                                    <td style="vertical-align:middle;"><code>triangle</code></td>
+                                </tr>
+                            </tbody>
+                        </table>
+                    </div>
                     <h2 id="arrow-shapes">Arrow Shapes</h2>
                     <p>The shapes of arrows are highly customizable. When defining an edge, the <code>arrowhead</code> parameter allows you change the style of arrowhead from the default <code>normal</code> arrow shape, to one of several others. Here are some of the other arrowhead types that could be used.</p>
                     <div class="table-responsive">
@@ -1201,6 +1243,7 @@ engine = "circo")</code></pre>
                                 <li><a href="#node-attributes">Node Attributes</a></li>
                                 <li><a href="#edge-attributes">Edge Attributes</a></li>
                                 <li><a href="#graph-attributes">Graph Attributes</a></li>
+                                <li><a href="#node-shapes">Node Shapes</a></li>
                                 <li><a href="#arrow-shapes">Arrow Shapes</a></li>
                             </ul>
                         </li>
