Add navigation element in 'io.html'

--- a/io.html
+++ b/io.html
@@ -199,7 +199,10 @@
                                 <li><a href="#viewing-options">Viewing Options</a></li>
                                 <li><a href="#export-options">Export Options</a></li>
                             </ul>
-                        </li>              
+                        </li>
+                        <li>
+                            <a href="#native-file-types">Native File Types </a>
+                        </li>       
                         <li>
                             <a href="#r-markdown">R Markdown</a>
                             <ul class="nav">
