Update text in 'index.html'

--- a/index.html
+++ b/index.html
@@ -242,7 +242,7 @@
                                     <h4 class="subheading">More Graphviz Engines</h4>
                                 </div>
                                 <div class="timeline-body">
-                                    <p class="text-muted">Change the way your diagram is rendered by taking advantage of all of these Graphviz engines: <strong>dot</strong>, <strong>neato</strong>, <strong>twopi</strong>, and <strong>circo</strong>.</p>
+                                    <p class="text-muted">Change the way your diagram is rendered by taking advantage of all of these <strong>Graphviz</strong> engines: <strong>dot</strong>, <strong>neato</strong>, <strong>twopi</strong>, and <strong>circo</strong>.</p>
                                 </div>
                             </div>
                         </li>
@@ -256,6 +256,19 @@
                                 </div>
                                 <div class="timeline-body">
                                     <p class="text-muted">An easier way to inject some <strong>R</strong> into your <strong>Graphviz</strong> graph specification. The <strong>@@</strong> marks the spot for an evaluated <strong>R</strong> expression residing in the footnotes section.</p>
+                                </div>
+                            </div>
+                        </li>
+                        <li>
+                            <div class="timeline-image">
+                                <img class="img-circle img-responsive" src="img/0_5.png" alt="0.3">
+                            </div>
+                            <div class="timeline-panel">
+                                <div class="timeline-heading">
+                                    <h4 class="subheading">Gantt charts and Graphviz functions</h4>
+                                </div>
+                                <div class="timeline-body">
+                                    <p class="text-muted">Using <strong>mermaid</strong>, make Gantt charts. Define chunks of <strong>Graphviz</strong> <strong>DOT</strong> code using <strong>R</strong> data frames and new convenience functions.</p>
                                 </div>
                             </div>
                         </li>
