--- a/docs.html
+++ b/docs.html
@@ -179,6 +179,19 @@
                             </div>
                         </li>
                     </ul>
+                    <ul class="media-list">
+                        <li class="media">
+                            <div class="media-left">
+                                <a href="#">
+                                    <img class="media-object" src="img/0_5.png" alt="0.5" width="100">
+                                </a>
+                            </div>
+                            <div class="media-body">
+                                <h4 class="media-heading">Version 0.5</h4>
+                                <p>&middot; Added support for subgraphs and Gantt charts in <strong>mermaid diagrams<br />&middot; added function <code>graphviz_nodes_edges_df</code> for generating <strong>Graphviz</strong> <strong>DOT</strong> code that defines nodes and edges (and their attributes) from data in two data frames: one for nodes, the other for the edge operations<br />&middot; Added function <code>graphviz_single_df</code> for generating <strong>Graphviz</strong> <strong>DOT</strong> code from a single data frame<br />&middot; Incorporated the new substitution operators <code>@_{...}</code> or <code>@^{...}</code> in <code>grViz</code> statements for subscripting and superscripting, respectively</p>
+                            </div>
+                        </li>
+                    </ul>
                 </div>
             </div>
         </div>
