--- a/index.html
+++ b/index.html
@@ -56,13 +56,10 @@
                         <a class="page-scroll" href="#features">Features</a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="#video">Video</a>
-                    </li>
-                    <li>
                         <a class="page-scroll" href="#versions">Versions</a>
                     </li>
                     <li>
-                        <a href="./docs.html">Docs</a>
+                        <a href="http://rich-iannone.github.io/DiagrammeR/docs.html">Docs</a>
                     </li>
                 </ul>
             </div>
@@ -78,7 +75,8 @@
                 <div class="intro-lead-in">Sometimes You Want To Create Nice Diagrams</div>
                 <div class="intro-heading">Why Not Do That With R?</div>
                 <a href="#features" class="page-scroll btn btn-xl">Tell Me How</a>
-                <a href="http://www.github.com/rich-iannone/DiagrammeR" class="btn btn-xl">Go To Project</a>
+                <a href="http://www.github.com/rich-iannone/DiagrammeR" class="btn btn-xl">Go to GitHub</a>
+                <a href="http://rich-iannone.github.io/DiagrammeR/docs.html" class="btn btn-xl">See the Docs</a>
             </div>
         </div>
     </header>
