Add new version information to 'index.html'

--- a/index.html
+++ b/index.html
@@ -272,6 +272,19 @@
                         </li>
                         <li class="timeline-inverted">
                             <div class="timeline-image">
+                                <img class="img-circle img-responsive" src="img/0_6.png" alt="0.3">
+                            </div>
+                            <div class="timeline-panel">
+                                <div class="timeline-heading">
+                                    <h4 class="subheading">Functions to Build Graphs</h4>
+                                </div>
+                                <div class="timeline-body">
+                                    <p class="text-muted">A large selection of new functions to creating graph diagrams is now available. No need to interact directly with <strong>DOT</strong> code, just build diagrams in an <strong>R</strong>-like way.</p>
+                                </div>
+                            </div>
+                        </li>
+                        <li class="timeline-inverted">
+                            <div class="timeline-image">
                                 <h4><br>
                                 <strong>...</strong></h4>
                             </div>
